--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ djangorestframework==3.14.0
 pillow==10.2.0
 psycopg2-binary==2.9.9
 django-environ==0.11.2
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
