--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ psycopg2-binary==2.9.9
 django-environ==0.11.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+django-cors-headers==4.3.1
+requests==2.31.0
+celery==5.3.6
+redis==5.0.3
+eventlet==0.35.2
